# BWT-Semb

./: CMakeCache.txt  CMakeLists.txt  Makefile  app  btw  bwt  cmake_install.cmake  exemplos.txt  main.c  texto.text  texto.txt
BWT/: bwt.c  bwt.h  file_manager.c  file_manager.h
FileManager/: file_manager.c  file_manager.h
